disable inputs for non-working filters, move edit button so that it is not covered...works for now, but need to fix visually

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -101,14 +101,6 @@ main {
   }
 }
 
-#search-result-container {
-  
-}
-
-.profile-tools {
-  margin-bottom: -48px;
-}
-
 .profile-tools p {
   margin-bottom: 0.25em;
   font-size: 0.9em;
